--- a/KTNV-LiveDemo/Views/Shared/MainLayout.cshtml
+++ b/KTNV-LiveDemo/Views/Shared/MainLayout.cshtml
@@ -25,6 +25,11 @@
     <script>
         
     </script>
+    <style>
+        select.field2 {
+            min-width: 25% !important;
+        }
+    </style>
 </head>
 <body  style="background-color : @ViewBag.backgroundColor;">
     <div class="bodywrapper">
@@ -84,7 +89,7 @@
             <ul class="headermenu">
                 <li><a href="/Home/Title"><span class="icon icon-pencil"></span>Các tiêu đề</a></li>
                 <li><a href="/Home/Attend"><span class="icon icon-flatscreen"></span>Danh sách tham dự</a></li>
-                <li><a href="/Home/FileUpload"><span class="icon icon-chart"></span>File đính kèm</a></li>
+                @*<li><a href="/Home/FileUpload"><span class="icon icon-chart"></span>File đính kèm</a></li>*@
             </ul>
 
            
