--- a/KTNV-LiveDemo/css/style.css
+++ b/KTNV-LiveDemo/css/style.css
@@ -190,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .user-lists .title {
     color: green;
-    padding-top: 5px;
+    padding-top: 15px;
     line-height: 20px;
     font-size : 20px;
     margin-bottom : 2px;
@@ -230,4 +230,7 @@ h1, h2, h3, h4, h5, h6 {
     font-style : italic;
     line-height : 22px;
     margin-bottom : 15px;
+}
+select.field2 {
+    min-width: 25% !important;
 }
