--- a/KTNV-LiveDemo/Views/Home/Index.cshtml
+++ b/KTNV-LiveDemo/Views/Home/Index.cshtml
@@ -14,13 +14,13 @@
 
     <title>Website Phòng họp trực tuyến</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/blog/">
+    @*<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/blog/">*@
 
     <!-- Bootstrap core CSS -->
     <link href="~/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
+   
     <link href="~/css/style.css" rel="stylesheet">
 
 
@@ -164,9 +164,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    @*<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script>*@
     <script src="~/js/bootstrap.min.js"></script>
     <script src="~/js/plugins/jquery-1.7.min.js"></script>
     <script>
