--- a/KTNV-LiveDemo/Views/Home/Index.cshtml
+++ b/KTNV-LiveDemo/Views/Home/Index.cshtml
@@ -61,6 +61,8 @@
                             <div class="card-title-top"><h4><p class="text-center" style="margin-top : 9px;">THÀNH PHẦN THAM DỰ CUỘC HỌP</p> </h4></div>
                             <div class="card-body">
                                 <marquee scrollamount="3" direction="up">
+                                    @if(!String.IsNullOrEmpty(ViewBag.Nguoichutri))
+                                    {
                                     <div class="row item">
                                         <div class="col-sm-3">
                                             <img style="margin-bottom : 10px; width : 70px; height : 70px; max-width : 80px;" src="@ViewBag.Anhnguoichutri" alt=""
@@ -72,6 +74,8 @@
                                             <p class="title" style="font-size : 17px;padding-top : 2px;font-style: italic;margin-bottom : 12px;">@ViewBag.Chucvuchutri</p>
                                         </div>
                                     </div>
+                                    }
+                                    
                                     @foreach (var item in Model.attends)
                                     {
 
